--- a/public/index.html
+++ b/public/index.html
@@ -5,10 +5,13 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
+    <meta name="description" content="Translate Serbian to English with our AI Translator app. Practice English and enhance your language skills.">
+    <meta name="keywords" content="AI translator, Serbian to English, language translation, language learning">
+    <meta property="og:title" content="AI Translator - Translate Serbian to English">
+    <meta property="og:description" content="Translate Serbian to English with our AI Translator app. Practice English and enhance your language skills.">
+    <meta property="og:image" content="%PUBLIC_URL%/logo512.png" />
+
+
     <link href="/dist/output.css" rel="stylesheet">
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
